@@ -18,8 +18,11 @@
  * Boston, MA 02110-1301, USA.
  */
 #include <QApplication>
-#include <QString>
 #include <QDebug>
+#include <QDesktopServices>
+#include <QFile>
+#include <QString>
+
 #include "mainwindow.h"
 #include "gqrx.h"
 
@@ -27,6 +30,7 @@
 #include <boost/program_options.hpp>
 namespace po = boost::program_options;
 
+static void reset_conf(const QString &file_name);
 
 int main(int argc, char *argv[])
 {
@@ -43,13 +47,14 @@ int main(int argc, char *argv[])
     po::options_description desc("Command line options");
     desc.add_options()
         ("help,h", "This help message")
-        ("reset,r", "Reset default configuration file (not implemented)")
-        ("conf,c", po::value<std::string>(&conf), "Start with the specified configuration file")
-        ("edit,e", "Edit the configuration before using it (not implemented)")
+        ("conf,c", po::value<std::string>(&conf), "Start with this config file")
+        ("edit,e", "Edit the config file before using it (not implemented)")
+        ("reset,r", "Reset configuration file")
     ;
 
     po::variables_map vm;
-    try {
+    try
+    {
         po::store(po::parse_command_line(argc, argv, desc), vm);
     }
     catch(const boost::program_options::invalid_command_line_syntax& ex)
@@ -60,8 +65,9 @@ int main(int argc, char *argv[])
 
     po::notify(vm);
 
-    //print the help message
-    if (vm.count("help") || clierr){
+    // print the help message
+    if (vm.count("help") || clierr)
+    {
         std::cout << "Gqrx software defined radio receiver " << VERSION << std::endl << desc << std::endl;
         return 1;
     }
@@ -69,10 +75,14 @@ int main(int argc, char *argv[])
     if (!conf.empty())
     {
         qDebug() << "User specified config file:" << QString::fromStdString(conf);
+        if (vm.count("reset"))
+            reset_conf(QString::fromStdString(conf));
     }
     else
     {
         qDebug() << "No user supplied config file. Using default.";
+        if (vm.count("reset"))
+            reset_conf("default.conf");
     }
 
     // Mainwindow will check whether we have a configuration
@@ -88,5 +98,29 @@ int main(int argc, char *argv[])
     else
     {
         return 1;
+    }
+}
+
+/*! \brief Reset configuration file specified by file_name. */
+static void reset_conf(const QString &file_name)
+{
+    QString cfg_file;
+    QByteArray xdg_dir = qgetenv("XDG_CONFIG_HOME");
+
+    if (xdg_dir.isEmpty())
+        cfg_file = QString("%1/.config/gqrx/%2").arg(QDir::homePath()).arg(file_name);
+    else
+        cfg_file = QString("%1/gqrx/%2").arg(xdg_dir.data()).arg(file_name);
+
+    if (QFile::exists(cfg_file))
+    {
+        if (QFile::remove(cfg_file))
+            qDebug() << cfg_file << "deleted";
+        else
+            qDebug() << "Failed to remove" << cfg_file;
+    }
+    else
+    {
+        qDebug() << "Cano not delete" << cfg_file << "- file does not exist!";
     }
 }
